--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-textarea-autosize": "^8.3.4",
+    "react-typical": "^0.1.3",
     "slugify": "^1.6.5",
     "swr": "^1.3.0",
     "tailwindcss": "^3.1.4"
