--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "^8.4.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal-image": "^2.5.0",
     "react-textarea-autosize": "^8.3.4",
     "react-typical": "^0.1.3",
     "slugify": "^1.6.5",
