--- a/admin/package.json
+++ b/admin/package.json
@@ -8,24 +8,22 @@
   "license": "UNLICENSED",
   "scripts": {
     "start": "sanity start",
-    "build": "sanity build"
+    "build": "sanity build",
+    "dev": "sanity dev"
   },
   "keywords": [
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.30.1",
-    "@sanity/core": "^2.30.2",
-    "@sanity/default-layout": "^2.30.1",
-    "@sanity/default-login": "^2.30.1",
-    "@sanity/desk-tool": "^2.30.1",
     "@sanity/eslint-config-studio": "^2.0.0",
-    "@sanity/vision": "^2.30.1",
+    "@sanity/ui": "^1",
+    "@sanity/vision": "^3.19.1",
     "eslint": "^8.6.0",
     "prop-types": "^15.7",
-    "react": "^17.0",
-    "react-dom": "^17.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "sanity": "^3.19.1",
     "styled-components": "^5.2.0"
   },
   "repository": {
