--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
     "moment": "^2.29.4",
-    "next": "12.2.0",
+    "next": "^14.0.1",
     "next-sanity": "^0.6.0",
     "nodemailer": "^6.7.7",
     "picosanity": "^4.0.0",
@@ -28,6 +28,7 @@
     "react-textarea-autosize": "^8.3.4",
     "react-typical": "^0.1.3",
     "slugify": "^1.6.5",
+    "swiper": "^11.0.3",
     "swr": "^1.3.0",
     "tailwindcss": "^3.1.4"
   },
