--- a/package.json
+++ b/package.json
@@ -5,28 +5,30 @@
   "scripts": {
     "dev": "next dev",
     "prebuild": "echo 'Building Sanity to public/admin' && cd admin && yarn && npx @sanity/cli build ../public/admin -y && echo 'Done'",
-    "build": "next build",
+    "build": "next build ",
     "start": "next start",
     "sanity": "cd admin && sanity start",
     "lint": "next lint"
   },
   "dependencies": {
     "@portabletext/react": "^1.0.6",
+    "@sanity/vision": "^3.19.2",
     "autoprefixer": "^10.4.7",
-    "axios": "^0.27.2",
+    "axios": "^1.6.1",
     "framer-motion": "^6.5.1",
     "moment": "^2.29.4",
     "next": "^14.0.1",
-    "next-sanity": "^0.6.0",
+    "next-sanity": "^6.0.1",
     "nodemailer": "^6.7.7",
     "picosanity": "^4.0.0",
     "postcss": "^8.4.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-modal-image": "^2.5.0",
+    "react-icons": "^4.11.0",
     "react-slick": "^0.29.0",
     "react-textarea-autosize": "^8.3.4",
     "react-typical": "^0.1.3",
+    "sanity": "^3.19.2",
     "slugify": "^1.6.5",
     "swiper": "^11.0.3",
     "swr": "^1.3.0",
