--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-typical": "^0.1.3",
     "sanity": "^3.19.2",
     "slugify": "^1.6.5",
+    "styled-components": "^6.1.1",
     "swiper": "^11.0.3",
     "swr": "^1.3.0",
     "tailwindcss": "^3.1.4"
